--- a/TrashCollector/TrashCollector/Views/Account/Login.cshtml
+++ b/TrashCollector/TrashCollector/Views/Account/Login.cshtml
@@ -36,6 +36,15 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="form-group">
+                    @Html.Label("user Role", new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @*@Html.DropDownList("Name")*@
+                        @Html.DropDownList("UserRoles", (SelectList)ViewBag.Name, " ")
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Log in" class="btn btn-default" />
@@ -45,9 +54,9 @@
                     @Html.ActionLink("Register as a new user", "Register")
                 </p>
                 @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
+            <p>
+                @Html.ActionLink("Forgot your password?", "ForgotPassword")
+            </p>*@
             }
         </section>
     </div>
