Added all all customer-related fields to View Customer.Edit

--- a/TrashCollector/Views/Account/Register.cshtml
+++ b/TrashCollector/Views/Account/Register.cshtml
@@ -34,6 +34,8 @@
         @Html.Label("user Role", new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @*@Html.DropDownList("Name")*@
+            @*@Html.Hidden()*@
+            v
             @Html.DropDownList("UserRoles", (SelectList)ViewBag.Name, " ")
         </div>
     </div>
