--- a/TrashCollector/Views/Account/Login.cshtml
+++ b/TrashCollector/Views/Account/Login.cshtml
@@ -38,10 +38,10 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.Label("user Role", new { @class = "col-md-2 control-label" })
+                    @Html.Label("User Role", new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
                         @*@Html.DropDownList("Name")*@
-                        @Html.DropDownList("UserRoles", (SelectList)ViewBag.Name, " ")
+                        @Html.DropDownList("UserRoles", (IEnumerable<SelectListItem>)ViewBag.UserNames, " ")
                     </div>
                 </div>
 
