--- a/TrashCollector/Views/Customer/Details.cshtml
+++ b/TrashCollector/Views/Customer/Details.cshtml
@@ -1,7 +1,123 @@
-﻿
+﻿@model TrashCollector.Models.Customer
+
 @{
     ViewBag.Title = "Details";
+    ViewBag.RoleName = "Customer";
 }
 
 <h2>Details</h2>
 
+<div>
+    <h4>Customer</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Name)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Street)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Street)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.City)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.City)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.State)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.State)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Zip)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Zip)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DayOfWeekPickup)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DayOfWeekPickup)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.SpecialPickupDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.SpecialPickupDate)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.StopDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.StopDate)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.StartDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.StartDate)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Bill)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Bill)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.BillDetails)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BillDetails)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.RoleName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.RoleName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ApplicationUserId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ApplicationUserId)
+        </dd>
+
+    </dl>
+</div>
+<p>
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Back to List", "Index")
+</p>
