--- a/TrashCollector/Views/Customer/Edit.cshtml
+++ b/TrashCollector/Views/Customer/Edit.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Employee</h4>
+    <h4>Customer</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.ID)
@@ -46,6 +46,13 @@
     </div>
     @*@Html.DisplayFor(model => model.State)*@
     <div class="form-group">
+        @Html.LabelFor(model => model.State, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.State, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.State, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="form-group">
         @Html.LabelFor(model => model.Zip, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Zip, new { htmlAttributes = new { @class = "form-control" } })
@@ -60,7 +67,7 @@
         <div class="col-md-10">
             @*@Html.EditorFor(model => model.DayOfWeekPickup, new { htmlAttributes = new { @class = "form-control" } })*@
             @*@Html.ValidationMessageFor(model => model.DayOfWeekPickup, "", new { @class = "text-danger" })*@
-            @Html.DropDownList("DayOfWeekOPickup", (IEnumerable<SelectListItem>)ViewBag.DaysOfWeek, " ")
+            @Html.DropDownList("DayOfWeekPickup", (IEnumerable<SelectListItem>)ViewBag.DaysOfWeek, " ")
         </div>
     </div>
 
@@ -88,7 +95,7 @@
             @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
         </div>
     </div>
-    <div class="form-group">
+    @*<div class="form-group">
         <div class="col-md-10">
             @Html.DisplayNameFor(model => model.Bill)
             @Html.DisplayFor(model => model.Bill)
@@ -99,7 +106,7 @@
             @Html.DisplayNameFor(model => model.BillDetails)
             @Html.DisplayFor(model => model.BillDetails)
         </div>
-    </div>
+    </div>*@
 
     @*<div class="form-group">
             @Html.LabelFor(model => model.RoleName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -122,8 +129,8 @@
         </div>
     </div>
 </div>
-    }
+}
 
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+<div>
+    @Html.ActionLink("Details", "Details", new { id = Model.ID })
+</div>
