--- a/TrashCollector/Views/Employee/Edit.cshtml
+++ b/TrashCollector/Views/Employee/Edit.cshtml
@@ -48,7 +48,8 @@
     </div>
 }
 
-<div>
-    @*// Change this to go somewhere that exists*@
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <div>
+        @Html.ActionLink("Details", "Details", new { id = Model.ID })
+        @*// Change this to go somewhere that exists*@
+        @*@Html.ActionLink("Back to List", "Index")*@
+    </div>
