Renamed Employee's List page to Index & corrected its LINQ query

--- a/TrashCollector/Views/Customer/Details.cshtml
+++ b/TrashCollector/Views/Customer/Details.cshtml
@@ -126,7 +126,7 @@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Pay Bill" class="btn btn-default" />
-            <button 
+            <button>Pay Bill</button>
         </div>
     </div>
 
