--- a/TrashCollector/Views/Employee/Index.cshtml
+++ b/TrashCollector/Views/Employee/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<TrashCollector.Models.Customer>
 
 @{
-    ViewBag.Title = "List";
+    ViewBag.Title = "Index";
 }
 
-<h2>List</h2>
+<h2>Today's Pickups</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
