--- a/TrashCollector/Views/Employee/Index.cshtml
+++ b/TrashCollector/Views/Employee/Index.cshtml
@@ -23,67 +23,97 @@
                 @Html.DropDownList("selectDayOfWeek", (IEnumerable<SelectListItem>)ViewBag.DaysOfWeek, " ")
                 @*@Html.DropDownList("SelectedDayOfWeek2", (IEnumerable<SelectListItem>)ViewBag.DaysOfWeek)*@
             </td>
+            <td>
+                <input type="submit" value="Go">
+            </td>
         </tr>
         <tr>
-            <td>
-                <input type = "submit" value = "Go">
-               </td>
-           </tr>
-       </table>
+            @*<td>
+                    <input type="submit" value="Go">
+                </td>*@
+        </tr>
+    </table>
 }
 
+@*<!DOCTYPE html>
+<html>
+<head>*@
+    @*<title>Simple Map</title>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+    <style>
+        /* Always set the map height explicitly to define the size of the div
+        * element that contains the map. */
+        #map {
+            height: 10%;
+        }
+        /* Optional: Makes the sample page fill the window. */
+        html, body {
+            height: 10%;
+            margin: 0;
+            padding: 0;
+        }
+    </style>*@
+@*</head>
+<body>*@
 
 
-@*return RedirectToAction("Index", "Employee");//, new { id = thisUserID });
-    @Html.ActionLink("Delete", "Delete", new { id = item.ID })*@
 
-@*// ViewBag.Day*@
-<p>
-    @*@Html.ActionLink("Create New", "Create")*@
-    @*@Html.   .DisplayText("Looking at work for ")*@
-    @*@Html.DropDownList("DayOfWeek", (IEnumerable<SelectListItem>)ViewBag.DaysOfWeek, " ")*@
-</p>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Street)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.City)
-        </th>
 
-        <th>
-            @Html.DisplayNameFor(model => model.DayOfWeekPickup)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SpecialPickupDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StopDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Bill)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BillDetails)
-        </th>
-        <th>
-            @*@Html.DisplayNameFor("Confirm")*@
-            @Html.DisplayName("Confirm Pickup")
-        </th>
+    @*return RedirectToAction("Index", "Employee");//, new { id = thisUserID });
+        @Html.ActionLink("Delete", "Delete", new { id = item.ID })*@
 
-        <th></th>
-    </tr>
+    @*// ViewBag.Day*@
+    <p>
+        @*@Html.ActionLink("Create New", "Create")*@
+        @*@Html.   .DisplayText("Looking at work for ")*@
+        @*@Html.DropDownList("DayOfWeek", (IEnumerable<SelectListItem>)ViewBag.DaysOfWeek, " ")*@
+    </p>
 
-    @foreach (var item in Model)
-    {
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Street)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.City)
+            </th>
+
+            <th>
+                @Html.DisplayNameFor(model => model.DayOfWeekPickup)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SpecialPickupDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StopDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StartDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Bill)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BillDetails)
+            </th>
+            <th>
+                @*@Html.DisplayNameFor("Confirm")*@
+                @Html.DisplayName("Confirm Pickup")
+            </th>
+            <th>
+                @*@Html.DisplayNameFor("Confirm")*@
+                @Html.DisplayName("Map")
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
@@ -118,7 +148,9 @@
                 @*@Html.ActionLink("Create New", "Create")*@
                 @*@Html.ActionLink("Confirm", "Confirm", new { id = item.ID }, new { id = item.ID }) |*@
                 @Html.ActionLink("Confirm", "ConfirmPickup", new { id = item.ID }) |
-
+            </td>
+            <td>
+                @Html.Action("Map", "MapAddress", new { id = item.ID})
             </td>
 
             <td>
@@ -127,14 +159,47 @@
                 @Html.ActionLink("Delete", "Delete", new { id = item.ID })
             </td>
         </tr>
+        }
+    </table>
+
+
+    @*<!DOCTYPE html>
+        <html>
+        <head>
+            <title>Simple Map</title>
+            <meta name="viewport" content="initial-scale=1.0">
+            <meta charset="utf-8">
+            <style>
+                 /* Always set the map height explicitly to define the size of the div
+                * element that contains the map. */
+                 #map {
+                     height: 10%;
+                 }
+                 /* Optional: Makes the sample page fill the window. */
+                 html, body {
+                     height: 10%;
+                     margin: 0;
+                     padding: 0;
+                 }
+            </style>
+        </head>*@
+    @*<body>*@
+    @*<div id="map"></div>
+    <script>
+        var map;
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: { lat: -34.397, lng: 150.644 },
+                zoom: 8
+            });
+        }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
+            async defer></script>*@
+@*</body>
+</html>*@
 
 
 
 
-    }
 
-
-
-
-
-</table>
