Removed Edit Details Delete links from Employee Index view

--- a/TrashCollector/Views/Employee/Edit.cshtml
+++ b/TrashCollector/Views/Employee/Edit.cshtml
@@ -49,7 +49,7 @@
 }
 
     <div>
-        @Html.ActionLink("Details", "Details", new { id = Model.ID })
+        @Html.ActionLink("Details", "Customer", new { id = Model.ID })
         @*// Change this to go somewhere that exists*@
         @*@Html.ActionLink("Back to List", "Index")*@
     </div>
